Refactor database context to support both PostgreSQL and SQLite, update connection strings, and add IDbContext interface

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@
     image: registry.cn-shenzhen.aliyuncs.com/tokengo/console
     ports:
       - 10426:8080
-    build:
-      context: .
-      dockerfile: src/Console.Service/Dockerfile
-
+    environment:
+      - TZ=Asia/Shanghai
+    volumes:
+      - ./data:/data
