--- a/src/Console.Service/appsettings.json
+++ b/src/Console.Service/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Host=postgres;Port=5432;Database=Console;Username=postgres;Password=postgres;"
+    "Type":"sqlite",// postgresql, sqlite
+    "Default": "Data Source=/data/ConsoleService.db"
   }
 }
