--- a/src/Console.Service/Console.Service.csproj
+++ b/src/Console.Service/Console.Service.csproj
@@ -12,12 +12,7 @@
         <PackageReference Include="FastService" Version="0.1.3" />
         <PackageReference Include="FastService.Analyzers" Version="0.1.3" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.5" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.5">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
@@ -51,6 +46,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="DbAccess\" />
       <Folder Include="Infrastructure\" />
     </ItemGroup>
 
@@ -67,6 +63,12 @@
       <Content Include="..\..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Console.Core\Console.Core.csproj" />
+      <ProjectReference Include="..\Provider\Console.Provider.PostgreSQL\Console.Provider.PostgreSQL.csproj" />
+      <ProjectReference Include="..\Provider\Console.Provider.Sqlite\Console.Provider.Sqlite.csproj" />
     </ItemGroup>
 
 </Project>
