--- a/src/Console.Service/Dockerfile
+++ b/src/Console.Service/Dockerfile
@@ -1,5 +1,5 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER root
+USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
@@ -15,14 +15,18 @@ RUN yarn
 RUN npm i  --force
 RUN yarn run build
 
+
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
+COPY ["src/Console.Service/Console.Service.csproj", "src/Console.Service/"]
+COPY ["src/Provider/Console.Provider.Sqlite/Console.Provider.Sqlite.csproj", "src/Provider/Console.Provider.Sqlite/"]
+COPY ["src/Console.Core/Console.Core.csproj", "src/Console.Core/"]
+COPY ["src/Provider/Console.Provider.PostgreSQL/Console.Provider.PostgreSQL.csproj", "src/Provider/Console.Provider.PostgreSQL/"]
+RUN dotnet restore "src/Console.Service/Console.Service.csproj"
 # 设置时区
 ENV TZ=Asia/Shanghai
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-COPY ["src/Console.Service/Console.Service.csproj", "src/Console.Service/"]
-RUN dotnet restore "src/Console.Service/Console.Service.csproj"
 COPY . .
 WORKDIR "/src/src/Console.Service"
 RUN dotnet build "./Console.Service.csproj" -c $BUILD_CONFIGURATION -o /app/build
@@ -36,4 +40,3 @@ WORKDIR /app
 COPY --from=publish /app/publish .
 COPY --from=web /src/dist ./wwwroot
 ENTRYPOINT ["dotnet", "Console.Service.dll"]
-
