Update FastService.Analyzers package version and modify docker-compose configuration

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,3 +7,6 @@
       - TZ=Asia/Shanghai
     volumes:
       - ./data:/data
+    build:
+      context: .
+      dockerfile: src/Console.Service/Dockerfile
