添加游客模式支持，允许用户在未登录状态下配置API设置，并更新相关组件以适应新功能。同时，优化了API请求的处理逻辑，确保在游客模式下能够正确使用API。

--- a/src/Console.Service/appsettings.json
+++ b/src/Console.Service/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "OpenAIEndpoint": "https://api.token-ai.cn/v1",
   "ConnectionStrings": {
     "Type":"sqlite",// postgresql, sqlite
     "Default": "Data Source=/data/ConsoleService.db"
