--- a/src/Console.Service/plugins/Generate/OptimizeInitialPrompt/config.json
+++ b/src/Console.Service/plugins/Generate/OptimizeInitialPrompt/config.json
@@ -17,7 +17,7 @@
     {
       "name": "requirement",
       "description": "用户的需求",
-      "required": true
+      "required": false
     }
   ]
 }
