Refactor deep reasoning integration naming and enhance prompt analysis framework for clarity and effectiveness

--- a/src/Console.Service/plugins/Generate/DeepReasoningPrompt/config.json
+++ b/src/Console.Service/plugins/Generate/DeepReasoningPrompt/config.json
@@ -20,7 +20,7 @@
       "required": false
     },
     {
-      "name": "deep-reasoning",
+      "name": "deepReasoning",
       "description": "深入推理的提示词",
       "required": true
     }
