新增优化Function Calling提示词的API接口和相关组件，支持深度推理选项，提升用户体验。同时，更新前端样式以适应新功能，确保界面友好性和交互性。

--- a/src/Console.Service/plugins/Generate/DeepReasoningFunctionCallingPrompt/config.json
+++ b/src/Console.Service/plugins/Generate/DeepReasoningFunctionCallingPrompt/config.json
@@ -18,6 +18,11 @@
       "name": "requirement",
       "description": "用户的需求",
       "required": false
+    },
+    {
+      "name": "deepReasoning",
+      "description": "深入推理的提示词",
+      "required": true
     }
   ]
 }
