--- a/src/Console.Service/appsettings.json
+++ b/src/Console.Service/appsettings.json
@@ -7,8 +7,11 @@
   },
   "AllowedHosts": "*",
   "OpenAIEndpoint": "https://api.token-ai.cn/v1",
+  "CHAT_MODEL": "gpt-4.1,o4-mini,claude-sonnet-4-20250514,claude-3-7-sonnet",
+  "IMAGE_GENERATION_MODEL": "gpt-image-1,dall-e-3",
   "ConnectionStrings": {
-    "Type":"sqlite",// postgresql, sqlite
+    "Type": "sqlite",
+    // postgresql, sqlite
     "Default": "Data Source=/data/ConsoleService.db"
   }
 }
