新增用户认证功能，支持用户登录和注册，更新相关API接口以确保用户信息的安全性和有效性。同时，优化前端组件以提升用户体验，确保界面友好性和交互性。

--- a/docker-compose.example.yaml
+++ b/docker-compose.example.yaml
@@ -25,6 +25,12 @@ services:
       # 时区设置
       - TZ=Asia/Shanghai
       
+      # 默认管理员账户配置
+      # 首次启动时会自动创建管理员账户
+      # 如果管理员用户已存在，则不会重复创建
+      - DEFAULT_USERNAME=admin
+      - DEFAULT_PASSWORD=admin123
+      
       # AI API端点配置 - 请根据需要修改
       # OpenAI官方: https://api.openai.com/v1
       # 国内代理: https://api.token-ai.cn/v1
