--- a/src/Console.Service/appsettings.Development.json
+++ b/src/Console.Service/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
+    // postgresql, sqlite
     "Type": "sqlite",
     "Default": "Data Source=ConsoleService.db"
   }
