更新数据库连接路径，调整docker-compose配置以支持数据持久化，同时新增docker-compose示例文件，确保开发环境的灵活性和可用性。

--- a/docker-compose.example.yaml
+++ b/docker-compose.example.yaml
@@ -58,7 +58,7 @@ services:
     
     volumes:
       # 数据持久化目录
-      - ./data:/data
+      - ./data:/app/data
       # 可选：自定义配置文件
       # - ./appsettings.json:/app/appsettings.json:ro
     
