--- a/src/Console.Service/appsettings.json
+++ b/src/Console.Service/appsettings.json
@@ -12,6 +12,6 @@
   "DEFAULT_IMAGE_GENERATION_MODEL":"gpt-4.1",
   "ConnectionStrings": {
     "Type": "sqlite",
-    "Default": "Data Source=/data/ConsoleService.db"
+    "Default": "Data Source=./data/ConsoleService.db"
   }
 }
