--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,9 +7,9 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: '版本号 (例如: v1.0.0)'
+        description: '版本号 (例如: 1.0.0)'
         required: true
-        default: 'v1.0.0'
+        default: '1.0.0'
         type: string
       create_release:
         description: '是否创建GitHub Release'
