新增提示词评估功能，优化提示词生成逻辑，支持多语言回复，并改进用户界面展示。

--- a/src/Console.Service/Console.Service.csproj
+++ b/src/Console.Service/Console.Service.csproj
@@ -67,6 +67,9 @@
       <None Update="plugins\Generate\OptimizeImagePrompt\skprompt.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="plugins\Generate\PromptWordEvaluation\skprompt.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -101,6 +104,9 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
       <Content Update="plugins\Generate\OptimizeImagePrompt\config.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <Content Update="plugins\Generate\PromptWordEvaluation\config.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
