--- a/src/Console.Service/plugins/Generate/DeepReasoningFunctionCalling/config.json
+++ b/src/Console.Service/plugins/Generate/DeepReasoningFunctionCalling/config.json
@@ -1,7 +1,7 @@
 ﻿{
   "schema": 1,
   "type": "completion",
-  "description": "提示词优化",
+  "description": "生成深入推理函数调用的提示词",
   "execution_settings": {
     "default": {
       "max_tokens": 63000,
