新增模型评分功能，优化提示词生成逻辑，支持多种模型的熔断策略，改进用户界面，提升用户体验和系统稳定性。

--- a/src/Console.Service/appsettings.json
+++ b/src/Console.Service/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "OpenAIEndpoint": "https://api.token-ai.cn/v1",
-  "CHAT_MODEL": "gpt-4.1,o4-mini,claude-sonnet-4-20250514,claude-3-7-sonnet",
+  "CHAT_MODEL": "gpt-4.1,o4-mini,claude-sonnet-4-20250514,claude-3-7-sonnet,Qwen3-235B-A22B,Qwen3-30B-A3B",
   "IMAGE_GENERATION_MODEL": "gpt-image-1,dall-e-3,imagen4",
   "DEFAULT_IMAGE_GENERATION_MODEL":"gpt-4.1",
   "ConnectionStrings": {
