--- a/src/Console.Service/Console.Service.csproj
+++ b/src/Console.Service/Console.Service.csproj
@@ -21,7 +21,9 @@
         <PackageReference Include="Microsoft.SemanticKernel.Agents.Orchestration" Version="1.56.0-preview" />
         <PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.56.0" />
         <PackageReference Include="Microsoft.SemanticKernel.Yaml" Version="1.56.0" />
+        <PackageReference Include="MiniExcel" Version="1.41.2" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+        <PackageReference Include="Polly" Version="8.6.0" />
         <PackageReference Include="Scalar.AspNetCore" Version="2.4.13" />
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
@@ -70,6 +72,9 @@
       <None Update="plugins\Generate\PromptWordEvaluation\skprompt.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="plugins\Generate\ScorePrompt\skprompt.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
@@ -107,6 +112,9 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
       <Content Update="plugins\Generate\PromptWordEvaluation\config.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <Content Update="plugins\Generate\ScorePrompt\config.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
