--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "github":{
-    "home":"https://github.com/AIDotNet/auto-prompt"
+  "github": {
+    "home": "https://github.com/AIDotNet/auto-prompt"
   },
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.3.0",
     "@ant-design/icons": "^6.0.0",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@tiptap/extension-color": "^2.12.0",
@@ -33,7 +34,7 @@
     "react-i18next": "^15.5.2",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^7.6.1",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^5.8.0",
     "slate": "^0.114.0",
     "slate-history": "^0.113.1",
     "slate-react": "^0.114.2",
