更新项目配置，新增Ollama服务的docker-compose文件，优化部署文档，添加一键启动脚本，删除不再使用的文件，提升用户体验和系统可用性。

--- a/src/Console.Service/appsettings.json
+++ b/src/Console.Service/appsettings.json
@@ -7,11 +7,12 @@
   },
   "AllowedHosts": "*",
   "OpenAIEndpoint": "https://api.token-ai.cn/v1",
-  "CHAT_MODEL": "gpt-4.1,o4-mini,Qwen3-30B-A3B,gpt-4.1-mini,gemini-2.5-flash-preview-04-17,o3,doubao-1-5-pro-256k-250115,doubao-seed-1-6-flash-250615,doubao-seed-1-6-thinking-250615,doubao-seed-1-6-250615,gemini-2.5-flash-preview-05-20,DeepSeek-V3,claude-sonnet-4-20250514,claude-3-7-sonnet,Qwen3-235B-A22B",
-  "IMAGE_GENERATION_MODEL": "gpt-image-1,dall-e-3,imagen4",
-  "DEFAULT_IMAGE_GENERATION_MODEL": "gpt-4.1",
+  "CHAT_MODEL": "",
+  "IMAGE_GENERATION_MODEL": "",
+  "DEFAULT_IMAGE_GENERATION_MODEL": "",
+  "API_KEY":"",
   "ConnectionStrings": {
     "Type": "sqlite",
-    "Default": "Data Source=./data/ConsoleService.db"
+    "Default": "Data Source=/app/data/ConsoleService.db"
   }
 }
