feat: 集成Augment Agent记忆系统和项目配置
- 初始化完整的Augment Agent 2.0记忆系统
- 建立三层记忆架构：长期记忆、工作记忆、短期记忆
- 创建项目技术栈分析和架构文档
- 记录7个重要技术决策(ADR-001到ADR-007)
- 建立开发最佳实践和模式指南

新增记忆系统文件:
- .augment_memory/core/ - 长期记忆(架构、模式、决策、最佳实践、技术栈)
- .augment_memory/activeContext.md - 工作记忆(当前任务上下文)
- .augment_memory/memory-index.md - 记忆系统索引
- .augment_memory/session-history.md - 会话历史记录

新增配置系统:
- .augment_memory_config/ - Augment Agent配置文件
- augment_master_config.md - 主配置文件(16章节完整配置)
- README.md - 快速开始指南和使用说明

项目分析成果:
- 技术栈: .NET 9.0 + React 19.1.0 + Microsoft Semantic Kernel
- 架构: 全栈AI提示词优化平台，支持多AI提供商
- 核心功能: 智能优化、模板管理、社区分享、用户系统
- 部署: Docker容器化，支持多环境配置

数据库更新:
- data/ConsoleService.db - 项目数据库文件

配置调整:
- docker-compose.yaml - 容器配置优化

关联任务: #Augment-Agent-记忆系统初始化

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,13 +5,13 @@
       - 10426:8080
     environment:
       - TZ=Asia/Shanghai
-      - DEFAULT_USERNAME=admin # 默认管理员账户
-      - DEFAULT_PASSWORD=admin123 # 默认管理员账户
-      - API_KEY=your_api_key_here # 替换为您的API密钥
-      - OpenAIEndpoint=https://api.token-ai.cn/v1 # OpenAI API端点
-      - DEFAULT_IMAGE_GENERATION_MODEL=gpt-4.1 # 用于优化图片提示词的基础模型
-      - IMAGE_GENERATION_MODEL=gpt-image-1,dall-e-3 # 用于生成图片的模型列表，逗号分隔
-      - CHAT_MODEL=gpt-4.1,gpt-4.1-mini,o4-mini,o3,DeepSeek-V3 # 聊天模型列表，逗号分隔
-      - DEFAULT_CHAT_MODEL=gpt-4.1 # 默认聊天模型
+      - DEFAULT_USERNAME=rainbowrain # 默认管理员账户
+      - DEFAULT_PASSWORD=rainbowrain09 # 默认管理员账户
+      - API_KEY=sk-KGmV4XCVjX6R9awanrDkViuV4lVQSjJwg5tQGCyhUjOFi6fy # 替换为您的API密钥
+      - OpenAIEndpoint=https://api.icerain.love/v1 # OpenAI API端点
+      - DEFAULT_IMAGE_GENERATION_MODEL=gemini-2.5-pro # 用于优化图片提示词的基础模型
+      - IMAGE_GENERATION_MODEL=imagen-4.0-ultra-generate-preview-06-06 # 用于生成图片的模型列表，逗号分隔
+      - CHAT_MODEL=gemini-2.5-pro,gemini-2.5-flash,deepseek-v3,deepseek-r1,gpt-4.1-mini,gpt-4o-mini # 聊天模型列表，逗号分隔
+      - DEFAULT_CHAT_MODEL=gemini-2.5-pro # 默认聊天模型
     volumes:
       - ./data:/app/data
