feat: 实现AI服务配置管理功能并修复关键Bug
🎯 新增功能:
- 完整的AI服务配置管理系统
- 支持7种主流AI服务提供商 (OpenAI, DeepSeek, Google AI, Ollama, Azure OpenAI, 火山引擎, Anthropic)
- AI服务配置的CRUD操作
- 连接测试和状态管理
- 加密存储API密钥
- 动态Kernel工厂支持多AI服务

🔧 技术实现:
- 新增AIServiceConfig实体和数据库迁移
- 实现AIServiceConfigService服务层
- 创建完整的前端UI组件和页面
- 集成Microsoft Semantic Kernel
- 添加数据加密和安全处理

🐛 Bug修复:
- 修复AI服务提供商下拉框为空的关键问题
- 解决FastService路由注册失败问题
- 通过临时API端点确保功能正常工作
- 修复前端API调用和数据结构问题

📋 文件变更:
- 后端: 新增实体、服务、DTO、迁移文件
- 前端: 新增页面、组件、API、状态管理
- 数据库: 添加AI服务配置表和相关迁移
- 文档: 添加详细的task-logs记录

✅ 验证结果:
- 所有AI服务提供商正常显示
- 配置创建和管理功能完整
- 前后端API通信正常
- 用户体验流畅

🔄 影响范围:
- 核心功能: AI服务配置管理
- 用户体验: 支持多种AI服务选择
- 系统架构: 增强的AI服务集成能力
- 安全性: 加密存储敏感信息

--- a/src/Console.Service/Console.Service.csproj
+++ b/src/Console.Service/Console.Service.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FastService" Version="0.2.2" />
         <PackageReference Include="FastService.Analyzers" Version="0.2.2" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
